# processmanager-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: ci.yml  release.yml
docs/: release-process.md
examples/: README.md  axum.rs  dynamic_add.rs  restart_supervisor.rs  runtime_context.rs  simple.rs
scripts/: release-check.sh
src/: error.rs  lib.rs  process_manager.rs  process_manager_builder.rs  process_signal_receiver.rs  runtime_guard.rs  runtime_handle.rs  runtime_process.rs  runtime_ticker.rs
src/builtin/: idle.rs  mod.rs  restart_supervisor.rs  restart_wrapper.rs  signal_receiver.rs
src/receiver/: mod.rs  signal.rs
tests/: builder.rs  integration.rs
