[package]
name = "processmanager"
description = "manage process lifecycles, graceful shutdown and process faults"
version = "0.3.0"
edition = "2021"
authors = ["Marc Riegel <mail@mrcrgl.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrcrgl/processmanager-rs"
categories = ["rust-patterns"]
keywords = ["process", "graceful-shutdown", "signal", "runnable"]

[features]
default = ["manager", "signal"]
log = ["log-v0_4"]
log-v0_4 = ["dep:log"]
tracing = ["tracing-v0_1"]
tracing-v0_1 = ["dep:tracing"]
manager = []
signal = ["dep:signal-hook", "dep:signal-hook-tokio"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
signal-hook = {version = "0.3", optional = true}
signal-hook-tokio = { version = "0.3", optional = true, features = ["futures-v0_3"] }
tokio = { version = "1", features = ["sync", "default", "rt-multi-thread", "macros", "time"] }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }